Map#forEach does not pass "map" argument to callback. https://bugs.webkit.org/show_bug.cgi?id=144187

Patch by Jordan Harband <ljharb@gmail.com> on 2015-04-26
Reviewed by Darin Adler.

Per https://people.mozilla.org/~jorendorff/es6-draft.html#sec-map.prototype.foreach
step 7.a.i., the callback should be called with three arguments.

* runtime/MapPrototype.cpp:
(JSC::mapProtoFuncForEach):

Canonical link: https://commits.webkit.org/162238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183374 268f45cc-cd09-0410-ab3c-d52691b4dbfc